--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,6 @@ dependencies {
     implementation platform("com.google.firebase:firebase-bom:29.0.4")
     implementation "com.google.firebase:firebase-firestore"
     implementation "com.github.bumptech.glide:glide:4.12.0"
+
+    implementation 'com.google.firebase:firebase-auth-ktx'
 }
