--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,8 +46,9 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     // Firebase
-    implementation platform("com.google.firebase:firebase-bom:29.0.4")
+    implementation platform("com.google.firebase:firebase-bom:31.0.2")
     implementation "com.google.firebase:firebase-firestore"
+    implementation 'com.google.firebase:firebase-firestore-ktx'
     implementation "com.github.bumptech.glide:glide:4.12.0"
 
     implementation 'com.google.firebase:firebase-auth-ktx'
