--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,8 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:4.12.0"
 
     implementation 'com.google.firebase:firebase-auth-ktx'
+
+    // Lottie
+    implementation "com.airbnb.android:lottie:5.2.0"
+
 }
