--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,8 @@ dependencies {
     implementation "com.google.firebase:firebase-firestore"
     implementation 'com.google.firebase:firebase-firestore-ktx'
     implementation "com.github.bumptech.glide:glide:4.12.0"
+    implementation 'com.google.firebase:firebase-messaging-ktx'
+    implementation 'com.google.firebase:firebase-analytics-ktx'
 
     implementation 'com.google.firebase:firebase-auth-ktx'
 
